--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js">
 	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>jQuery Slide Box Plugin</title>
+		<!-- Compressed CSS -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
+		<link rel="stylesheet" href="css/custom.css">
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<!-- Compressed JavaScript -->
+		<script src="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"></script>
 	</head>
 	<body>
-
+		<div class="row">
+			<div class="small-2 large-12 columns" style="text-align:center;">
+				<h1>jQuery Slide Box Plugin</h1>
+				<p>
+					--- Work in progress ---
+				</p>
+			</div>
+		</div>
 	</body>
 </html>
